--- a/main.css
+++ b/main.css
@@ -4,17 +4,28 @@
     --shadow: #BABECC;
     --background:#EBECF0;
 }
+
 *{
     box-sizing: border-box;
     margin: 0;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
+
 body{
     display: flex;
     flex-direction: column;
     min-height: 100vh;
     background: var(--background);
+    letter-spacing: 1px;
 }
+
+h1{
+    color: var(--shadow);
+    text-shadow: 1px 1px 1px var(--white);
+    display: block;
+}
+
+
 header{
     padding: 2rem 1rem;
     max-width: 800px;
@@ -47,7 +58,7 @@ input, button{
     height: 50px;
     width:50px;
     padding: 1rem;
-    margin-right: 1rem;
+    margin: 1rem;
     font: size 1.5em;
     box-shadow:  inset 2px 2px 5px var(--shadow), inset -5px -5px 10px var(--white);
     transition: all 0.2s ease-in-out;
@@ -57,7 +68,7 @@ input, button{
     box-shadow:  inset 1px 1px 2px var(--shadow), inset -1px -1px 2px var(--white);
 }
 
-#new-task-submit{
+button, input[type=submit]{
     color:#61677C;
     font-weight: bold;
     box-shadow: -5px -5px 20px var(--white),  3px 3px 10px var(--shadow);
@@ -65,6 +76,7 @@ input, button{
     cursor: pointer;
     font-weight: 600;
     display: block;
+    margin: 1rem;
 }
 
 #new-task-submit:hover{
@@ -75,3 +87,37 @@ input, button{
     box-shadow: inset 1px 1px 2px var(--shadow), inset -1px -1px 2px var(--white);
 }
 
+button:hover{
+    box-shadow: -2px -2px 5px var(--white), 2px 2px 5px var(--shadow);
+}
+
+button:active{
+    box-shadow: inset 1px 1px 2px var(--shadow), inset -1px -1px 2px var(--white);
+}
+
+main{
+    flex: 1 1 0%;
+    padding: 2rem 1rem;
+    max-width: 800px;
+    width: 100%;
+    margin: 0 auto; 
+}
+
+.task-list{
+    padding:1rem;
+}
+
+.task-list h2{
+    color: var(--shadow);
+    text-shadow: 1px 1px 1px var(--white);
+    display: block;
+}
+
+#tasks .task{
+    display: flex;
+    justify-content:space-between;
+    padding: 1rem;
+    margin: 1rem;
+    box-shadow: -2px -2px 5px var(--white), 2px 2px 5px var(--shadow);
+    border-radius: 1rem;
+}
